# telegram-test-birthday

./: .env.example  README.md  docker-compose.yml
.github/workflows/: backend.yml  bot.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/app/: auth.py  main.py  models.py  schemas.py  settings.py  validators.py
backend/app/routers/: users.py
backend/migrations/models/: 0_20250307113656_init.py
bot/: .dockerignore  entrypoint.sh  pyproject.toml
bot/app/: dispatcher.py  main.py  settings.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  global.d.ts  utils.ts
frontend/src/components/: LoaderSpinner.vue  UserTimer.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/views/: HomeView.vue  InputView.vue  UserView.vue
